@@ -1,5 +1,7 @@
 2021-04-04 Dusan Jocic <dusanjocic@msn.com>
 	* [Filesystem] Changed fs_debug logging option
+	* [Engine] Fix mouse locking issues when the mouse would lock at the center of your screen
+	* [Engine] Implemented Com_Clampi and simplified timeNudge
 	
 2021-04-03 Dusan Jocic <dusanjocic@msn>
 	* [RendererSystem} Addressed the problem with DPI inside the engine
